# OCCT_FACE_WIRE_EDGE

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  OcctWidget.cpp  OcctWidget.h  main.cpp
